{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 9,
  "lineage": "5ed2280e-435d-ef0c-eb3d-aa06c7c42e7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-054d6a336762e438e",
            "arn": "arn:aws:ec2:us-east-1:058264125651:instance/i-04da9733dbbff1f1c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04da9733dbbff1f1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dove-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cd0e4588dd0ecff6",
            "private_dns": "ip-172-31-22-26.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.26",
            "public_dns": "ec2-54-146-249-229.compute-1.amazonaws.com",
            "public_ip": "54.146.249.229",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dccd4c8d4cf2ca67",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "dove-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02fafa8c5c865d45c",
            "tags": {
              "Name": "Dove-web",
              "tags": "Dove"
            },
            "tags_all": {
              "Name": "Dove-web",
              "tags": "Dove"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0948f646c0fea029f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dove-sg",
            "data.aws_ami.amiID"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dove-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264125651:security-group/sg-0948f646c0fea029f",
            "description": "dove-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0948f646c0fea029f",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.183.240.250/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dove-sg",
            "name_prefix": "",
            "owner_id": "058264125651",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dove-sg"
            },
            "tags_all": {
              "Name": "dove-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08341b83f3126399c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allowAllOutbound_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264125651:security-group-rule/sgr-09202d91d0b5d9921",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09202d91d0b5d9921",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0948f646c0fea029f",
            "security_group_rule_id": "sgr-09202d91d0b5d9921",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dove-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allowAllOutbound_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264125651:security-group-rule/sgr-03308910546825265",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-03308910546825265",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0948f646c0fea029f",
            "security_group_rule_id": "sgr-03308910546825265",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dove-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264125651:security-group-rule/sgr-026f4d4a9bd5eb5ef",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 80,
            "id": "sgr-026f4d4a9bd5eb5ef",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0948f646c0fea029f",
            "security_group_rule_id": "sgr-026f4d4a9bd5eb5ef",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dove-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sshfromyIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264125651:security-group-rule/sgr-00e36d36e7e09c698",
            "cidr_ipv4": "103.183.240.250/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-00e36d36e7e09c698",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0948f646c0fea029f",
            "security_group_rule_id": "sgr-00e36d36e7e09c698",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dove-sg"
          ]
        }
      ]
    }
  ]
}